@@ -1,3 +1,4 @@
+- crazybirdy : Fit length for "Loading Darwin"
 - meklort : Update align directives to 2^(old_align)
 - Ermac : Bump svn to 2.3
 - ErmaC : Update efi Header
